[package]
name = "mw5_hangar"
version = "0.1.0"
edition = "2021"
author = "Zenith Ramirez <draqonfyre@proton.me>"
description = "A tool for choosing hangar configurations for MechWarrior 5: Mercenaries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
crossterm = "0.26.1"
itertools = "0.11.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.43"
